Correction d’un bug empêchant le site de s’afficher si l’utilisateur lance une recherche depuis la version mobile de l’interface
Le barre de recherche n'est pas dans le header dans la version mobile de l'UI.
Le composant "Recherche" cherche une barre de recherche dans le header, ce qui causait une erreur

--- a/react_app/src/App2.css
+++ b/react_app/src/App2.css
@@ -869,7 +869,7 @@ textarea:focus {
     width: 75%;
   }
 
-  div .searchPageSearchBarInput {
+  #searchPageSearchBar .searchPageSearchBarInput input {
     width: 80em;
   }
 
